--- a/view/frontend/templates/question.phtml
+++ b/view/frontend/templates/question.phtml
@@ -1,40 +1,69 @@
+<div class="container">
+    <div class="row">
+        <div class="panel panel-default widget">
+            <div class="panel-heading">
+                <span class="glyphicon glyphicon-comment"></span>
+                <h3 class="panel-title">
+                    Recent Comments</h3>
+                <!-- <span class="label label-info">
+                    78</span> -->
+            </div>
+            <div class="panel-body">
+                <ul class="list-group">
+                <?php 
+                    foreach($block->getAllData() as $key => $val){
+                        if($val->getProductId() == $block->getCurrentProduct()->getId())
+                        {
+                        
+                ?>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-xs-2 col-md-1">
+                                <!-- <img src="http://placehold.it/80" class="img-circle img-responsive" alt="" /></div> -->
+                            <div class="col-xs-10 col-md-11">
+                                <div>
+                                    <a href="http://www.jquery2dotnet.com/2013/10/google-style-login-page-desing-usign.html">
+                                        <?php echo $val->getFirstname().' '.$val->getLastname();?></a>
+                                    <!-- <div class="mic-info">
+                                        By: <a href="#">Bhaumik Patel</a> on 2 Aug 2013
+                                    </div> -->
+                                </div>
+                                <div class="comment-text">
+                                   <?php echo $val->getContent();?> 
+                                </div>
+                                <div class="action">
+                                    <button type="button" class="btn btn-primary btn-xs" title="Edit">
+                                        <span class="glyphicon glyphicon-pencil"></span>
+                                    </button>
+                                    <button type="button" class="btn btn-success btn-xs" title="Approved">
+                                        <span class="glyphicon glyphicon-ok"></span>
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-xs" title="Delete">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </li>
+                <?php
+                        }
+                        
+                    }
+                ?>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
 <?php
-    // $helper = $this->helper('AHT\Question\Helper\Helper');
-    // if($helper->isLoggedIn())
-    // {
-    //     echo "login";
-    // }
-    // else 
-    // {
-    //     echo "not login";
-    // }
-    // var_dump($block->isLoggedIn());
-    // var_dump($block->getUser());
-    
-    foreach($block->getAllData() as $key => $val){
-        if($val->getProductId() == $block->getCurrentProduct()->getId())
-        {
-            // echo "<pre>";
-            // print_r($key->getData());
-            // echo "</pre>";
-            // echo $val->getId();
-            echo $val->getFirstname().' '.$val->getLastname();
-            echo $val->getQuestion();
-            // echo $val->getProductId();
-            // echo $block->getProduct($val->getProductId())->getName();
-            echo "</br>";
-        }
-        
-    }
-    $user = $block->getUser();
-    if($user == null )
+    if($block->isLoggedIn() == true )
     {
-        echo "Vui lòng đăng nhập để đặt câu hỏi";
         ?>
         <form method='post' action="<?php echo $this->getUrl("question/index/save")?>">
         <input type="hidden" name="url" value="<?= $block->getCurrentUrl();?>"/>
         <input type="hidden" name="product_id" value="<?= $block->getCurrentProduct()->getId();?>"/>
-        <input type="hidden" name="user_id" value="1"/>
             <div class="form-group">
                 <label for="name">Câu hỏi</label>
                 <input type="textarea" class="form-control" id="comment" placeholder="Enter a question" name="question"/>
@@ -45,30 +74,8 @@
         
     }
     else {
-        // $idProduct = $block->getCurrentProduct()->getId();
-        // $idUser = $user;
-        // echo $idUser;
-       echo "ok";
-       ?>
-        <form method='post' action="<?php echo $this->getUrl("question/index/save")?>">
-            <div class="form-group">
-                <label for="name">Câu hỏi</label>
-                <input type="textarea" class="form-control" id="comment" placeholder="Enter a question" name="question">
-            </div>
-            <button type="submit" class="btn btn-primary" >Submit</button>
-        </form>
-        <?php
+        echo "Vui lòng đăng nhập để đặt câu hỏi";
     }
 
 ?>
-<?php 
-    // $om = \Magento\Framework\App\ObjectManager::getInstance();
 
-    // $customerSession = $om->get('Magento\Customer\Model\Session');
-    // if($customerSession->isLoggedIn()) {
-    //     echo   $customerSession->getCustomer()->getId();  
-    // }
-    // else {
-    //     echo "not login";
-    // } 
-?>
