--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -8,7 +8,7 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="product.info.details">
-            <block class="AHT\Question\Block\Frontend\Question" name="product.question" template="AHT_Question::question.phtml" group="detailed_info">
+            <block class="AHT\Question\Block\Frontend\Question" name="product.question" template="AHT_Question::question.phtml" group="detailed_info" cacheable="false">
                 <arguments>
                     <argument name="title" translate="true" xsi:type="string">Question</argument>
                     <argument name="sort_order" xsi:type="string">0</argument>
