--- a/view/frontend/templates/ajax/edit.phtml
+++ b/view/frontend/templates/ajax/edit.phtml
@@ -3,7 +3,7 @@
 ?>
 <form method='post' class="form-edit">
         <input type="hidden" name="id" value="<?= $block->getData('data')['id'];?>"/>
-        <input type="textarea" class="form-control" id="comment" value="<?= $block->getData('data')['content'];?>" name="question"/>
+        <input type="textarea" class="form-control" id="comment" value="<?= $block->getData('data')['content'];?>" name="answer"/>
         <button type="submit" class="btn btn-primary btn-question" >Lưu</button>
         <button type="button" class="btn btn-primary btn-cancel" >Hủy</button>
 </form>
