--- a/view/frontend/templates/question.phtml
+++ b/view/frontend/templates/question.phtml
@@ -76,9 +76,9 @@
             function saveEdit(){
                 jQuery(".form-edit").submit(function(e){
                     e.preventDefault();
-                    var content = jQuery('input[name="question"]').val();
+                    var content = jQuery('input[name="answer"]').val();
                     var id = jQuery('input[name="id"]').val();
-                    var url = "<?php echo $this->getUrl().'question/ajax/saveedit'?>";
+                    var url = "<?php echo $this->getUrl().'question/ajax/save'?>";
                     jQuery.ajax({
                         url: url,
                         type: 'POST',
@@ -137,7 +137,6 @@
                 var id =parseInt( $(this).data('id'));;
                 var product_id = jQuery('input[name="product_id"]').val();
                 var className = "answer-"+id;
-                alert(className);
                 var url = "<?php echo $this->getUrl().'question/ajax/answer'?>";
                 jQuery.ajax({
                     url: url,
@@ -169,7 +168,7 @@
                     var question_id = jQuery('input[name="question_id"]').val();
                     var content = jQuery('input[name="answer"]').val();
                     // alert(content);
-                    var url = "<?php echo $this->getUrl().'question/ajax/saveanswer'?>";
+                    var url = "<?php echo $this->getUrl().'question/ajax/save'?>";
                     jQuery.ajax({
                         url: url,
                         type: 'POST',
